--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>LayerCake Example</title><link rel="icon" type="image/png" href="/favicon.png"><link rel="stylesheet" href="/global.css"><link rel="stylesheet" href="/build/bundle.css?version=1627997408627"><script defer="defer" src="/build/bundle.js?version=1627997408627"></script></head><body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>ONS Svelte Charts Library</title>
+  <link rel="icon" type="image/png" href="./favicon.png">
+  <link rel="stylesheet" href="./global.css">
+  <link rel="stylesheet" href="./build/bundle.css?version=1627997408627">
+  <script defer="defer" src="./build/bundle.js?version=1627997408627"></script>
+</head>
+
+<body></body>
+
+</html>
